--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.1",
+    "framer-motion": "^4.0.2",
     "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0",
     "raf": "^3.4.1",
